# ogimet-scraper

./: .env  .gitignore  README.md  main.py  pd.py  pyproject.toml  requirements.txt  weather_data.db
.github/workflows/: run.yml  test.yml
src/: db.py  utils.py
src/db/: postgres.py  sqlite.py
test/: test_main.py
