[project]
name = "scrape-ogimet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "pandas>=2.2.3",
    "pytest>=8.3.3",
    "typer>=0.13.0",
    "pytest-watcher>=0.4.3",
    "tabulate>=0.9.0",
    "openpyxl>=3.1.5",
    "pydantic>=2.9.2",
    "fastparquet>=2024.11.0",
    "pyarrow>=18.1.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-rP"
